--- a/css/style.css
+++ b/css/style.css
@@ -1045,8 +1045,9 @@ input.detail-input {
 .profile-badge{
     background-color: #ff5722;
     color: white;
-    padding: 2px 8px;
+    padding: 5px 10px;
     border-radius: 10px;
-    font-size: 12px;
+    font-size: 15px;
     margin-left: 8px;
+    font-weight: bold;
 }
