--- a/css/style.css
+++ b/css/style.css
@@ -1085,7 +1085,7 @@ input.detail-input {
 }
 
 .timer div span:not(:first-child) {
-  position: absolute;
+  /* position: absolute;*/
   top: 50px;
   left: 0;
 }
