--- a/css/general.css
+++ b/css/general.css
@@ -81,6 +81,10 @@
     background-color: #45a049;
   }
 
+ .popup-button.cancel-btn {
+  background-color: #e74c3c;
+}
+
   /* POP UP CSS END */  
 
  /* LOADER CSS STARTS */
