--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,6 @@ body {
 
 
 #addFuelForm, #addJourney, #addServiceForm  {
-  flex-direction: column;
-  gap: 15px;
   max-width: 600px;
   padding: 20px;
   background: #fff;
@@ -29,7 +27,7 @@ body {
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
 
-#completeJourneyForm,  #addFuelForm, #addJourney, #addServiceForm  {
+#completeJourneyForm  {
   display: flex;
   flex-direction: column;
   gap: 15px;
